--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="countdown-container">
       <h1>Birthday Countdown</h1>
       <p id="caption">
-        Enter your birthday below and discover how much time is left until your
-        special day! 🎂🎁
+        Time Left For Your
+        Special Day! 🎂🎁
       </p>
       <div id="confetti" class="container"></div>
       <div class="input-container">
